<resources>
    <string name="app_name">Glasgow Museums</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="museum_image_alt">Image of selected museum</string>
    <string name="placename">Place Name</string>
    <string name="description">Description</string>
    <string name="title_activity_place">Museum</string>

    <string name="hello_world">Hello world!</string>
    <string name="view_on_web">View on Museum Website</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_view_pages">ViewPagesActivity</string>
    <string name="title_activity_single">SingleActivity</string>
    <string name="title_activity_maps">How to get there</string>
    <string name="title_activity_open_hours">Museum Name Goes Here</string>
    <string name="title_activity_exhibitions">Exhibitions</string>

    <string name="Hours">Current Opening Hours</string>
    <string name="Sunday">Sunday:</string>
    <string name="Monday">Monday:</string>
    <string name="Tuesday">Tuesday:</string>
    <string name="Wednesday">Wednesday:</string>
    <string name="Thursday">Thursday:</string>
    <string name="Friday">Friday:</string>
    <string name="Saturday">Saturday:</string>

    <string name="error_no_museum">Error no museum selected!</string>
    <string name="title_activity_news">What\'s on in Glasgow</string>
    <string name="title_activity_news_detail">Details</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="directions">Directions</string>

    <string name="error_exhibitions_connection">Internet connection is required to update exhibitions information.</string>
    <string name="error_reviews_connection">Internet connection is required to view reviews.</string>
    <string name="error_directions_connection">Internet connection is required to get directions.</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_review_form">Add Review</string>
    <string name="title_activity_directions">Get Directions</string>
    <string name="origin_hint">Enter starting point - e.g. street name and city, place name or a post code</string>

    <!-- directions form-->
    <string name="origin_choice_label">From current location:</string>
    <string name="origin_label">From:</string>
    <string name="destination_label">To:</string>
    <string name="transport_mode_label">Mode of transport:</string>
    <string name="directionsButton">Get Directions</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_directions_results">Directions</string>


</resources>
