<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="uk.co.sarahjohnston.museoglasgow.DirectionsActivity"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin_choice_label"
            android:id="@+id/origin_choice_label"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="right"
                    android:id="@+id/currentLocationChoice">
            <RadioButton android:id="@+id/currentLocation_yes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/yes"
                         android:layout_marginRight="16dp"
                         android:checked="true"/>
            <RadioButton android:id="@+id/currentLocation_no"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/no"/>
        </RadioGroup>

    </LinearLayout>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/line"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin_label"
        android:hint="Enter starting point"
        android:id="@+id/originLabel"
        android:visibility="gone"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/origin_choice"
        android:hint="@string/origin_hint"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/destination_label"
        android:id="@+id/destination"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/line"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_mode_label"
        android:id="@+id/transport_mode_label"
        android:layout_marginTop="5dp"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transport_mode"
        android:layout_marginBottom="16dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/buttonsCancel"
            android:id="@+id/cancelButton"
            android:layout_marginRight="8dp"
            android:layout_gravity="top"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/directionsButton"
            style="@style/buttonsGeneral"
            android:id="@+id/directionsButton"
            android:layout_gravity="top"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

</LinearLayout>
